manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-frontend
  labels:
    app: fortune-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune-frontend
  template:
    metadata:
      labels:
        app: fortune-frontend
    spec:
      nodeSelector:
        agentpool: linux
      containers:
      - name: fortune-frontend
        image: ghcr.io/safaie/frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: fortune-frontend
          protocol: TCP
