manifests/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1        
  template:          
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        agentpool: linux
      containers:
      - name: redis
        image: redis:7.0-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 6379
