manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookie-backend
  labels:
    app: cookie-backend
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: cookie-backend
