manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  defaultBackend:
    service:
      name: sfc-frontend
      port:
        number: 80
  rules:
  - host: <domain_name>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sfc-frontend
            port:
              number: 80
